--- a/app/styles/logos.scss
+++ b/app/styles/logos.scss
@@ -66,7 +66,7 @@
     &--tasktimer { fill: $color-tasktimer-letter; }
   }
 
-  @media only screen and (min-width: $media-lg) {
+  @media only screen and (min-width: $media-md) {
 
     & {
       display: block;
