--- a/app/styles/menu.scss
+++ b/app/styles/menu.scss
@@ -15,7 +15,7 @@
   top: 0;
   visibility: hidden;
   width: 100%;
-  z-index: 3;
+  z-index: 4;
 
   &--visible {
     opacity: 1;
